2005-12-04  Jim Meyering  <jim@meyering.net>

	* openat-priv.h (EXPECTED_ERRNO): Add ENOSYS, for Solaris 8.
	Paul Eggert reported that unlink/rmdir vs. e.g., /proc/self/fd/N/FILE
	fails with ENOSYS.  This makes openat revert to using save-cwd.c
	functions in that case.

2005-12-01  Paul Eggert  <eggert@cs.ucla.edu>

	Sync from gnulib.

	* exclude.c: Include verify.h.
	(verify): Remove.  All callers changed to use verify.h's version.
	* strtoimax.c: Likewise.
	* utimecmp.c: Likewis.e

	* obstack.c [defined _LIBC && defined USE_IN_LIBIO]: Don't
	include <wchar.h>; no longer needed.

2005-12-01  Jim Meyering  <jim@meyering.net>

	Sync from gnulib.

	* intprops.h (signed_type_or_expr__): Define.
	(INT_STRLEN_BOUND) [__GNUC__]: Use a slightly tighter bound
	for unsigned types.

2005-12-01  Jakub Jelinek  <jakub@redhat.com>
	and  Ulrich Drepper  <drepper@redhat.com>

	Import from libc via gnulib.
	* obstack.c (print_and_abort) [defined _LIBC]: Use __fxprintf
	instead of inline stream orientation test and two separate
	function calls.  Pay no attention to USE_IN_LIBIO.

2005-12-01  Roland McGrath  <roland@redhat.com>

	Import from libc via gnulib.  [BZ #1331]
	* obstack.h [!__STDC__] (obstack_int_grow_fast): Fix misnamed
	macro argument.
	Reported by Matej Vela <vela@debian.org>.

2005-11-30  Jim Meyering  <jim@meyering.net>

	* openat-priv.h: New file, defining macros used by mkdirat.c
	and openat.c.
	* mkdirat.c: Include openat-priv.h.
	Remove definitions of macros defined therein.
	* openat.c: Likewise.

	* mkdirat.c (mkdirat): New file and function.
	* openat.h (mkdirat): Declare.

2005-11-25  Paul Eggert  <eggert@cs.ucla.edu>

	* mountlist.c (ME_DUMMY): "none" and "proc" file systems are dummies
	too.  Problem with "none" reported by Bob Proulx.  Problem with
	"proc" reported by n0dalus.

	* mountlist.c: Include <limits.h>.
	(dev_from_mount_options)
	[defined MOUNTED_GETMNTENT1 || defined MOUNTED_GETMNTENT2]: